Project1-main/Project1-main/Project2/force-app/main/default/objects/Boat_Sold__c/fields/Boat_Length__c.field-meta.xml
<CustomField>
    <fullName>Boat_Length__c</fullName>
    <label>Boat Length</label>
    <length>18</length>
    <type>Text</type>
</CustomField>