Project1-main/Project1-main/Project2/force-app/main/default/objects/Boat_Sold__c/fields/Boat_Type_Offshore__c.field-meta.xml
<CustomField>
    <fullName>Boat_Type_Offshore__c</fullName>
    <label>Boat Type Offshore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Boat_Type_Offshore</valueSetName>
    </valueSet>
</CustomField>