Project1-main/Project1-main/Project2/force-app/main/default/objects/Boat_Sold__c/fields/Sold_to__c.field-meta.xml
<CustomField>
    <fullName>Sold_to__c</fullName>
    <description>Who the boat was sold to.</description>
    <label>Sold to</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Boats Sold</relationshipLabel>
    <relationshipName>Boats_Sold</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>